src/objects/CandidateRating__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Ratings for Candidates</description>
    <fields>
        <fullName>Decision_time_frame__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Decision time frame</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Patents__c</fullName>
        <label>Patents</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <label>Referral</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Relocate__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Relocate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>potential__c</fullName>
        <label>potential</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>travel__c</fullName>
        <label>travel</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Candidate Rating</label>
</CustomObject>